--- a/public/app/forgotPassword.html
+++ b/public/app/forgotPassword.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>RepRob | Password dimenticata</title>
         <meta name="description" content="App per inviare le catene del RepartoRoboris">
-        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
 
         <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -50,16 +50,15 @@
     </body>
     <script>
         var firebaseConfig = {
-          apiKey: "AIzaSyCVxbDM1zr0FPpNr-FuYgNaFQVkS4t9N7g",
-          authDomain: "repartoroboris-b18ef.firebaseapp.com",
-          databaseURL: "https://repartoroboris-b18ef-default-rtdb.europe-west1.firebasedatabase.app",
-          projectId: "repartoroboris-b18ef",
-          storageBucket: "repartoroboris-b18ef.appspot.com",
-          messagingSenderId: "1085078472479",
-          appId: "1:1085078472479:web:0c78de56a92da899c7d22a",
-          measurementId: "G-6NBCCXKKLV"
+            apiKey: "AIzaSyBdwC1L-GGfTZPkrV1AqKOlx_GBLiNvFwY",
+            authDomain: "bullismo-41536.firebaseapp.com",
+            projectId: "bullismo-41536",
+            storageBucket: "bullismo-41536.appspot.com",
+            messagingSenderId: "38895252262",
+            appId: "1:38895252262:web:c8dbb8dcb827688d8747e7",
+            measurementId: "G-9BXB7HHGM1"
         };
-        // Initialize Firebase
+        
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
     </script>
