--- a/public/dashboard/supporto.html
+++ b/public/dashboard/supporto.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contrastare il bullismo</title>
         <meta name="description" content="App dedica a descrirre e contrastare il bullismo">
-        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
         <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
@@ -80,21 +80,23 @@
                     c0.2,0.2,0.2,0.6,0,0.9C17.3,17.6,17.1,17.7,17,17.7z"/></svg>
 	  	  	  	</label>
             </div>
-            <a class="link" href="./forgotpassword/">Dimenticato la password?</a> 
-            <p>Mai eseguito l'accesso? <a class="link" href="./forgotpassword/">Registrati qui!</a> </p>
+            <hr>
+            <button class="loginBtn loginBtn--google" id="glogin">Login con Google</button><br>
+            <hr>
+            <a class="link" href="/app/forgotPassword.html">Dimenticato la password?</a> 
+            <p>Mai eseguito l'accesso? <a class="link" href="/app/register.html">Registrati qui!</a> </p>
             <a class="Button" id="loginBtn">Accedi</a>
         </div>
     </body>
     <script>
         var firebaseConfig = {
-          apiKey: "AIzaSyCVxbDM1zr0FPpNr-FuYgNaFQVkS4t9N7g",
-          authDomain: "repartoroboris-b18ef.firebaseapp.com",
-          databaseURL: "https://repartoroboris-b18ef-default-rtdb.europe-west1.firebasedatabase.app",
-          projectId: "repartoroboris-b18ef",
-          storageBucket: "repartoroboris-b18ef.appspot.com",
-          messagingSenderId: "1085078472479",
-          appId: "1:1085078472479:web:0c78de56a92da899c7d22a",
-          measurementId: "G-6NBCCXKKLV"
+            apiKey: "AIzaSyBdwC1L-GGfTZPkrV1AqKOlx_GBLiNvFwY",
+            authDomain: "bullismo-41536.firebaseapp.com",
+            projectId: "bullismo-41536",
+            storageBucket: "bullismo-41536.appspot.com",
+            messagingSenderId: "38895252262",
+            appId: "1:38895252262:web:c8dbb8dcb827688d8747e7",
+            measurementId: "G-9BXB7HHGM1"
         };
       
         firebase.initializeApp(firebaseConfig);
