--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
     </body>
     <script src="/scripts/dashboardparams.js"></script>
     <script src="/scripts/iframeswitch.js"></script>
+    <script src="/scripts/registersw.js"></script>
 </html>
 
 
