aggiungo contenuto alle pagine informative e schermata di login

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="IT-it">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
             <ul class="sidebarMenuInner">
                 <li><span>Informazioni</span></li>
                 <li class="current" id="base"><a onclick="switchiframe('base')">Cos'è il bullismo</a></li>
-                <li id="cyberBullismo"><a onclick="switchiframe('cyberBullying')">CyberBullismo</a></li>
+                <li id="cyberBullying"><a onclick="switchiframe('cyberBullying')">CyberBullismo</a></li>
                 <li id="bullyingDay"><a onclick="switchiframe('bullyingDay')">Giornata contro il bullismo</a></li>
                 <li><span>Contrastare il bullismo</span></li>
                 <li id="testimony"><a onclick="switchiframe('testimony')">Due testimonanze</a></li>
