--- a/public/dashboard/supporto.html
+++ b/public/dashboard/supporto.html
@@ -6,6 +6,7 @@
         <title>Contrastare il bullismo</title>
         <meta name="description" content="App dedica a descrirre e contrastare il bullismo">
         <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
         <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -101,6 +102,7 @@
       
         firebase.initializeApp(firebaseConfig);
       
+        const firestore = firebase.firestore();
         const auth = firebase.auth();
     </script>
     <script src="/scripts/auth.js"></script>
