--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contrastare il Bullismo</title>
-        <meta name="description" content="App per inviare le catene del RepartoRoboris">
+        <meta name="description" content="Sito web dedicato alla lotta contro il bullismo">
         <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-auth.js"></script>
         <script defer src="https://www.gstatic.com/firebasejs/8.2.6/firebase-database.js"></script>
