--- a/public/install/index.html
+++ b/public/install/index.html
@@ -40,6 +40,6 @@
                 });"
             >Installa</a>
         </div>
-        <p class="footer">App di Andrea "Luigi" Bonari</p>
+        <p class="footer">App di Andrea "Luigi" Bonari<br>Samuele Giovio<br>Iacopo Balzarini<br>vasiljan pretashi</p>
     </body>
 </html>
